--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"start": "nodemon index.js"
+		"start": "nodemon --ext *"
 	},
 	"repository": {
 		"type": "git",
@@ -22,6 +22,8 @@
 		"express": "^4.18.2"
 	},
 	"devDependencies": {
+		"connect-livereload": "^0.6.1",
+		"livereload": "^0.9.3",
 		"nodemon": "^2.0.20"
 	}
 }
