--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,11 @@ testem.log
 *.cache
 .env
 /typings
+*.http
 
 # System Files
 .DS_Store
 Thumbs.db
 .angular/cache/13.2.5/angular-webpack/1273cfe0d92de82cdbc04a229c96011f1f3d35f2/0.pack
 src/environments/*
+test.http
