--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	},
 	"homepage": "https://github.com/hiredtocode/rest-api-nodejs-and-express#readme",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"connect-livereload": "^0.6.1",
